--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7190,7 +7190,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  background-image: url("../assets/images/FONDO.JPG");
+  background-image: url("../assets/images/FONDO.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
