--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -3,7 +3,7 @@
 html {font-size: 62.5%;}
 
 body {
-  background-image: url("../assets/images/FONDO.JPG"); 
+  background-image: url("../assets/images/FONDO.jpg"); 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
