--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1744,24 +1744,17 @@ textarea.form-control {
 
 .btn {
   display: inline-block;
+  font-family: Lexend;
   font-weight: 400;
-  color: #212529;
+  color: white;
   text-align: center;
   vertical-align: middle;
   user-select: none;
-  background-color: transparent;
-  border: 1px solid transparent;
+  background-color: #0099cc;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
-  @media (prefers-reduced-motion: reduce) {
-    .btn {
-      transition: none; } }
-  .btn:hover {
-    color: #212529;
-    text-decoration: none; }
+  border-radius: 0.25rem; }
   .btn:focus, .btn.focus {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
@@ -7351,6 +7344,9 @@ p {
   color: black;
   text-align: left; }
 
+.formulario__btn--tyf {
+  font-size: 2rem; }
+
 .bB {
   border-bottom: solid 2px #0099cc; }
 
@@ -7528,6 +7524,9 @@ p {
   font-weight: 300;
   color: black;
   text-align: left; }
+
+.formulario__btn--tyf {
+  font-size: 2rem; }
 
 .bB {
   border-bottom: solid 2px #0099cc; }
