--- a/scss/_animacionesYTransiciones.scss
+++ b/scss/_animacionesYTransiciones.scss
@@ -15,3 +15,7 @@
 .img--animacion:hover {
 		transform: scale(1.03,1.03);
 }
+
+.shows__entradas--animacion:hover {
+		transform: scale(1.03,1.03);
+}
