--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -22,11 +22,17 @@ body {
 
 .biografia__background {
   background: rgba(10,10,10,0.75);
-  // background: linear-gradient(0deg, rgba(10,10,10,0.000001) 0%, rgba(10,10,10,1) 100%);
 }
 
 .contacto__background {
   background: rgb(10,10,10);
   background: linear-gradient(0deg, rgba(10,10,10,0.30) 0%, rgba(10,10,10,1) 100%);
 }
+
+.discografia__background {
+  background: rgb(10,10,10);
+  background: linear-gradient(0deg, rgba(10,10,10,0.30) 0%, rgba(10,10,10,1) 100%);
+}
+
+
 
