--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7200,6 +7200,9 @@ body {
   top: 0px !important;
   z-index: 999; }
 
+.footer--background {
+  background-color: black; }
+
 .index__background {
   background: #0a0a0a;
   background: linear-gradient(0deg, rgba(10, 10, 10, 0.3) 0%, #0a0a0a 100%); }
@@ -7223,6 +7226,9 @@ body {
   .hidden-mobile {
     visibility: hidden; } }
 
+strong {
+  font-weight: 800; }
+
 .td-none:hover {
   text-decoration: none; }
 
@@ -7289,6 +7295,13 @@ p {
   font-family: Lexend;
   font-size: 2rem;
   font-weight: 100;
+  color: white;
+  text-align: center; }
+
+.footer__copy--tyf {
+  font-family: Lexend;
+  font-size: 1rem;
+  font-weight: 300;
   color: white;
   text-align: center; }
 
@@ -7430,6 +7443,12 @@ p {
 
 .contenido__img--border {
   border: solid 2px #660033; }
+
+@media only screen and (min-width: 1024px) {
+  .img-crop {
+    width: 100%;
+    height: 425px;
+    object-fit: none; } }
 
 .disco__letra--bm {
   background-color: black; }
@@ -7451,6 +7470,9 @@ p {
   justify-content: space-between;
   align-items: center; }
 
+strong {
+  font-weight: 800; }
+
 .td-none:hover {
   text-decoration: none; }
 
@@ -7517,6 +7539,13 @@ p {
   font-family: Lexend;
   font-size: 2rem;
   font-weight: 100;
+  color: white;
+  text-align: center; }
+
+.footer__copy--tyf {
+  font-family: Lexend;
+  font-size: 1rem;
+  font-weight: 300;
   color: white;
   text-align: center; }
 
@@ -7659,6 +7688,12 @@ p {
 .contenido__img--border {
   border: solid 2px #660033; }
 
+@media only screen and (min-width: 1024px) {
+  .img-crop {
+    width: 100%;
+    height: 425px;
+    object-fit: none; } }
+
 .disco__letra--bm {
   background-color: black; }
 
@@ -7675,21 +7710,25 @@ nav {
 footer {
   background-color: black; }
 
-.nav__pages--animacion:hover {
-  transform: scale(1.03, 1.03); }
-
-.discos__spotify--animacion:hover {
-  transform: scale(1.03, 1.03); }
-
-.footer__redes--animacion:hover {
-  transform: translate(0px, -3px); }
-
-.img--animacion:hover {
-  transform: scale(1.03, 1.03); }
-
-.shows__entradas--animacion:hover {
-  transform: scale(1.03, 1.03); }
-
-.contenido__desplazamiento:hover {
-  transition: 1s;
-  transform: translate(25px, 0); }
+@media only screen and (min-width: 1024px) {
+  .nav__pages--animacion:hover {
+    transform: scale(1.05, 1.05);
+    transition: 0.5s; }
+  .discos__spotify--animacion:hover {
+    transform: scale(1.05, 1.05);
+    transition: 0.5s; }
+  .footer__redes--animacion:hover {
+    transform: translate(0px, -3px);
+    transition: 0.5s; }
+  .img--animacion:hover {
+    transform: scale(1.03, 1.03);
+    transition: 0.5s; }
+  .shows__entradas--animacion:hover {
+    transform: scale(1.05, 1.05);
+    transition: 0.5s; }
+  .contacto__botones--animacion:hover {
+    transform: scale(1.05, 1.05);
+    transition: 0.5s; }
+  .contenido__desplazamiento:hover {
+    transition: 1s;
+    transform: translate(25px, 0); } }
