--- a/scss/_boxMod.scss
+++ b/scss/_boxMod.scss
@@ -14,6 +14,13 @@
 	border: solid 2px $magenta;
 }
 
+@media only screen and (min-width: 1024px) {
+	.img-crop {
+		width: 100%;
+		height: 425px;
+		object-fit: none;
+	}
+}
 // discografía
 
 .disco__letra--bm {
