--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7730,5 +7730,5 @@ footer {
     transform: scale(1.05, 1.05);
     transition: 0.5s; }
   .contenido__desplazamiento:hover {
-    transition: 1s;
-    transform: translate(25px, 0); } }
+    transition: 1s !important;
+    transform: translate(25px, 0) !important; } }
