--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7187,7 +7187,8 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  overflow: hidden; }
 
 .sombraTxt {
   text-shadow: 1px 1px 10px black; }
