--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,7 +7,8 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
+  overflow: hidden;
 }
 
 .sombraTxt {text-shadow: 1px 1px 10px black;}
