--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7180,16 +7180,14 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 html {
-  font-size: 62.5%;
-  overflow: hidden; }
+  font-size: 62.5%; }
 
 body {
   background-image: url("../assets/images/FONDO.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  overflow: hidden; }
+  background-size: cover; }
 
 .sombraTxt {
   text-shadow: 1px 1px 10px black; }
