--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,6 +1,6 @@
 @import "colores";
 
-html {font-size: 62.5%; overflow: hidden;}
+html {font-size: 62.5%;}
 
 body {
   background-image: url("../assets/images/FONDO.jpg"); 
@@ -8,7 +8,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
 }
 
 .sombraTxt {text-shadow: 1px 1px 10px black;}
