--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,6 +1,6 @@
 @import "colores";
 
-html {font-size: 62.5%; overflow: scroll;}
+html {font-size: 62.5%;}
 
 body {
   background-image: url("../assets/images/FONDO.jpg"); 
